# backproto

./: .gitignore  .vscode.mcp.json  CHANGELOG.md  GAS-BENCHMARKS.md  HEARTBEAT.md  IDENTITY.md  LICENSE  MEMORY.md  NEXT-STEPS.md  OBSERVATIONS.md  OPERATOR-PLAYBOOK.md  OWNERS-MANUAL.md  README.md  SOUL.md  USER.md  mkdocs.yml
.github/: copilot-instructions.md
.openclaw/: workspace-state.json
agent-explorer/: README.md  package.json
bitrecipes/: package-lock.json  package.json
command-deck/: README.md  package.json
contracts/: .env.example  README.md  foundry.toml
create-pura-agent/: README.md  package.json
designsystem/: AGENT-PROMPT.md  components.md
gateway/: .env.example  .gitignore  BUSINESSPLAN.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
gtm/: ROADMAP.md  blog-post.md  community-posts.md  feedback-form.md  grant-base.md  grant-openclaw.md  grant-superfluid.md  outreach-dm.md  swarm-catalini.md  twitter-thread.md
lightning-dash/: README.md  package.json
mcp-server/: README.md  package-lock.json  package.json
memory/: 2026-03-25.md
plan/: 00-DECISIONS.md  01-NOVELTY-ASSESSMENT.md  02-PAPER-OUTLINE.md  03-PROTOCOL-SPEC.md  04-CONTRACTS-BLUEPRINT.md  05-SIMULATION-DESIGN.md  06-BIBLIOGRAPHY.md  07-IMPLEMENTATION-ROADMAP.md  08-GAPS-AND-MITIGATIONS.md  11-BITRECIPES.md  12-VR-ABSORB.md  13-THERMODYNAMIC-ADOPTION.md  14-ARTIFACT-ROYALTY-GRAPHS.md  15-SPECIFICATION-BONDS.md  README.md  (+3 more)
pura-bpe/: Cargo.toml  README.md
pura-bpe/src/: ewma.rs  lib.rs  pricing.rs  quality.rs  routing.rs  scoring.rs  types.rs
(+345 files in other folders)
